--- a/collective/sendaspdf/locales/nl/LC_MESSAGES/collective.sendaspdf.po
+++ b/collective/sendaspdf/locales/nl/LC_MESSAGES/collective.sendaspdf.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2010-07-21 08:54+0000\n"
+"POT-Creation-Date: 2010-08-02 07:02+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI +ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -13,6 +13,10 @@ msgstr ""
 "Language-Name: English\n"
 "Preferred-Encodings: utf-8 latin1\n"
 "Domain: DOMAIN\n"
+
+#: ./profiles/default/actions.xml
+msgid "Download as PDF"
+msgstr "Downloaden als PDF"
 
 #: ./profiles/default/actions.xml
 msgid "Send as PDF"
