--- a/collective/sendaspdf/HISTORY.txt
+++ b/collective/sendaspdf/HISTORY.txt
@@ -4,7 +4,8 @@ Changelog
 1.1 (unreleased)
 ----------------
 
-- Nothing changed yet.
+- Fix broken release with missing files. (Now released with setuptools-git
+  installed.) [mark]
 
 
 1.0.2 (2010-08-02)
