--- a/collective/sendaspdf/HISTORY.txt
+++ b/collective/sendaspdf/HISTORY.txt
@@ -4,6 +4,8 @@ Changelog
 1.2 (unreleased)
 ----------------
 
+- compatibility fixes with Plone4. [vincent]
+
 - added Ajax version of "Download as PDF" link. [vincent]
 
 - added Ajax version of the "Send as PDF" link. [vincent]
