--- a/collective/sendaspdf/HISTORY.txt
+++ b/collective/sendaspdf/HISTORY.txt
@@ -4,7 +4,9 @@ Changelog
 2.2 (unreleased)
 ----------------
 
-- Nothing changed yet.
+- Fixed encoding to use mkore than ASCII. [mauriziolupo]
+
+- Added a generic setup handler for sendaspdftool. [mauriziolupo]
 
 
 2.1.1 (2010-12-23)
