--- a/collective/sendaspdf/HISTORY.txt
+++ b/collective/sendaspdf/HISTORY.txt
@@ -4,9 +4,10 @@ Changelog
 2.2 (unreleased)
 ----------------
 
-- Fixed encoding to use mkore than ASCII. [mauriziolupo]
+- Fixed encoding to avoid being limitated to ASCII. [mauriziolupo]
 
-- Added a generic setup handler for sendaspdftool. [mauriziolupo]
+- Added a generic setup handler for sendaspdftool and import/export
+  preferences. [mauriziolupo]
 
 
 2.1.1 (2010-12-23)
