--- a/collective/sendaspdf/HISTORY.txt
+++ b/collective/sendaspdf/HISTORY.txt
@@ -4,7 +4,12 @@ Changelog
 2.4 (unreleased)
 ----------------
 
-- Nothing changed yet.
+- Display a file name based on the context's title when downloading
+  the page. [Giacomo Spettoli]
+
+- Added some functional tests. [vincent]
+
+- Don't repeat POST parameters anymore. [vincent]
 
 
 2.3.1 (2011-06-27)
