--- a/collective/sendaspdf/HISTORY.txt
+++ b/collective/sendaspdf/HISTORY.txt
@@ -4,6 +4,8 @@ Changelog
 2.5 (unreleased)
 ----------------
 
+- Bugfix in TinyMCE loading with Plone 4. [vincent]
+
 - Bugfix when checking if the attachment name should be providen,
   'self.excluded_browser_attachment' does not seem to work on every
   instances, used 'self.getExcluded_browser_attachment()'
