--- a/collective/sendaspdf/HISTORY.txt
+++ b/collective/sendaspdf/HISTORY.txt
@@ -4,7 +4,8 @@ Changelog
 2.4.2 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Bugfix when the context title contains non-ascii characters. Zope
+  does not accept those characters in set_header [vincent+Vladislav]
 
 
 2.4.1 (2011-12-07)
