--- a/collective/sendaspdf/HISTORY.txt
+++ b/collective/sendaspdf/HISTORY.txt
@@ -4,6 +4,9 @@ Changelog
 2.4.2 (unreleased)
 ------------------
 
+- Bugfix is JS bindings to download the PDF, it now uses the correct
+  context. [vincent]
+
 - Bugfix when the context title contains non-ascii characters. Zope
   does not accept those characters in set_header [vincent+Vladislav]
 
