--- a/collective/sendaspdf/HISTORY.txt
+++ b/collective/sendaspdf/HISTORY.txt
@@ -4,7 +4,8 @@ Changelog
 2.4.3 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Enabled possibility to render table of contents and book style using
+  GET arguments. [vincent]
 
 
 2.4.2 (2011-12-09)
