Added replace_relative_url utility, that replaces relative url with full ones. This avoids links to stop working (or trying to open a document on the reader's computer) and broken images. For images, if the user logged-in can access it, the src attribute directly contains the file content in base64 format. That avoids problem with images contained in folder non accessible for non logged-in users.

--- a/collective/sendaspdf/HISTORY.txt
+++ b/collective/sendaspdf/HISTORY.txt
@@ -4,6 +4,9 @@ Changelog
 2.4.3 (unreleased)
 ------------------
 
+- Added utility to replace relative URL and include images as data in
+  the img tag. [vincent]
+
 - Enabled possibility to render table of contents and book style using
   GET arguments. [vincent]
 
