--- a/collective/sendaspdf/HISTORY.txt
+++ b/collective/sendaspdf/HISTORY.txt
@@ -4,6 +4,8 @@ Changelog
 2.4.3 (unreleased)
 ------------------
 
+- Fixed generating pdf name [kroman0]
+
 - Added utility to replace relative URL and include images as data in
   the img tag. [vincent]
 
