--- a/collective/sendaspdf/HISTORY.txt
+++ b/collective/sendaspdf/HISTORY.txt
@@ -4,6 +4,10 @@ Changelog
 2.4.3 (unreleased)
 ------------------
 
+- Added layout options when generating files with wkhtmlaspdf. Options
+  available are: use book style, generate table of contents, margins.
+  Those options can be overriden in download links. [vincent]
+
 - Added utility to replace relative URL and include images as data in
   the img tag. [vincent]
 
