Adapter implementing ISendAsPDFOptionsMaker should adapt the current context (this way we can have options for a given context). Refactored extra options in browser/base to integrate the possibility to let the adapter override all options.

--- a/collective/sendaspdf/HISTORY.txt
+++ b/collective/sendaspdf/HISTORY.txt
@@ -5,8 +5,8 @@ Changelog
 ------------------
 
 - Added possibility to add an adapter that will generate default
-  options for PDF generation. Adapter should implement
-  ISendAsPDFOptionsMaker and adapter ISendAsPDFTool [vincent]
+  options for PDF generation.
+  Adapter must implement ISendAsPDFOptionsMaker. [vincent]
 
 - Added layout options when generating files with wkhtmlaspdf. Options
   available are: use book style, generate table of contents, margins.
