--- a/collective/sendaspdf/locales/collective.sendaspdf.pot
+++ b/collective/sendaspdf/locales/collective.sendaspdf.pot
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2012-02-27 12:28+0000\n"
+"POT-Creation-Date: 2012-06-15 08:12+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI +ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -255,6 +255,7 @@ msgstr ""
 msgid "msg_error"
 msgstr ""
 
+#. Default: "The e-mail has been sent"
 #: ./browser/send.py:140
 #: ./browser/templates/ajax.pt:12
 msgid "msg_success"
