--- a/collective/sendaspdf/locales/fr/LC_MESSAGES/collective.sendaspdf.po
+++ b/collective/sendaspdf/locales/fr/LC_MESSAGES/collective.sendaspdf.po
@@ -1,18 +1,18 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2012-02-27 12:28+0000\n"
-"PO-Revision-Date: 2012-02-27 13:33+0100\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"POT-Creation-Date: 2012-06-15 08:12+0000\n"
+"PO-Revision-Date: 2012-06-15 10:07+0200\n"
+"Last-Translator: Vincent Pretre\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0\n"
-"Language-Code: en\n"
-"Language-Name: English\n"
+"Language-Code: fr\n"
+"Language-Name: Francais\n"
 "Preferred-Encodings: utf-8 latin1\n"
-"Domain: DOMAIN\n"
+"Domain: collective.sendaspdf\n"
 
 #: ./profiles/default/actions.xml
 msgid "Download as PDF"
@@ -140,7 +140,7 @@ msgstr "E-mail de votre correspondant"
 #. Default: "List of browsers for which PDF filename will not be forced"
 #: ./tool.py:51
 msgid "label_excluded_browsersattachments"
-msgstr ""
+msgstr "Liste de navigateurs pour lesquels le nom du fichier ne doit pas être forcé."
 
 #. Default: "Directory where PDF files will be stored"
 #: ./tool.py:42
@@ -155,7 +155,7 @@ msgstr "Nom du fichier PDF dans l'email"
 #. Default: "Browsers might warn the user that downloading the PDF might harm their computer. You can set here a list of browser for which the system will not force the download. We recommend to have Chrome in the list"
 #: ./tool.py:54
 msgid "label_help_excluded_attachments"
-msgstr ""
+msgstr "Certains navigateurs affichent un avertissement lorsque le nom du fichier est forcé. Vous pouvez spécifier ici la liste des navigateurs pour lesquels il ne faut pas forcer le nom du fichier. Il est recommandé de placer Chrome dans la liste."
 
 #. Default: "Default body of e-mails"
 #: ./tool.py:86
@@ -170,22 +170,22 @@ msgstr "Titre par défaut des e-mails"
 #. Default: "Margin bottom"
 #: ./tool.py:178
 msgid "label_margin_bottom"
-msgstr ""
+msgstr "Marge basse"
 
 #. Default: "Margin left"
 #: ./tool.py:188
 msgid "label_margin_left"
-msgstr ""
+msgstr "Marge gauche"
 
 #. Default: "Margin right"
 #: ./tool.py:168
 msgid "label_margin_right"
-msgstr ""
+msgstr "Marge droite"
 
 #. Default: "Margin top"
 #: ./tool.py:158
 msgid "label_margin_top"
-msgstr ""
+msgstr "Marge haute"
 
 #. Default: "Your name"
 #: ./browser/templates/send_form.pt:8
@@ -240,7 +240,7 @@ msgstr "Sommaire"
 #. Default: "Use book style"
 #: ./tool.py:133
 msgid "label_use_book_style"
-msgstr ""
+msgstr "Utiliser le style \"livre\""
 
 #. Default: "wkhtmltopdf: Simple shell utility to convert html to pdf using the webkit (Safari, Chrome) rendering engine (http://code.google.com/p/wkhtmltopdf/)"
 #: ./tool.py:249
