--- a/collective/sendaspdf/locales/en/LC_MESSAGES/collective.sendaspdf.po
+++ b/collective/sendaspdf/locales/en/LC_MESSAGES/collective.sendaspdf.po
@@ -160,7 +160,7 @@ msgstr ""
 msgid "label_filename_title"
 msgstr ""
 
-#. Default: "Browsers might warn the user that downloading the PDF might harm their computer. You can set here a list of browser for which the system will not force the download. We recommend to have Chrome in the list"
+#. Default: "Browsers might warn the user that downloading the PDF might harm their computer. You can set here a list of browsers for which the system will not force the download. We recommend to have Chrome in the list"
 #: ./tool.py:49
 msgid "label_help_excluded_attachments"
 msgstr ""
