--- a/collective/sendaspdf/locales/it/LC_MESSAGES/collective.sendaspdf.po
+++ b/collective/sendaspdf/locales/it/LC_MESSAGES/collective.sendaspdf.po
@@ -164,7 +164,7 @@ msgstr "Cartella dove verranno salvati i file PDF"
 msgid "label_filename_title"
 msgstr "Nome del file PDF nella mail"
 
-#. Default: "Browsers might warn the user that downloading the PDF might harm their computer. You can set here a list of browser for which the system will not force the download. We recommend to have Chrome in the list"
+#. Default: "Browsers might warn the user that downloading the PDF might harm their computer. You can set here a list of browsers for which the system will not force the download. We recommend to have Chrome in the list"
 #: ./tool.py:49
 msgid "label_help_excluded_attachments"
 msgstr "Alcuni browser potrebbero notificare all'utente che lo scaricamento del PDF danneggerà il loro computer. Inserire qui una lista di browser per i quali il sistema non forzerà il download. Si raccomanda di inserire anche Chrome in questa lista"
